@@ -3,24 +3,13 @@ package com.enonic.app.guillotine.graphql.helper;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
+import java.util.stream.Collectors;
 
 import com.enonic.xp.content.Content;
-import com.enonic.xp.content.ContentId;
-import com.enonic.xp.content.ContentIds;
-import com.enonic.xp.content.ContentService;
-import com.enonic.xp.content.GetContentByIdsParams;
 
 final class ConnectionExtractionStrategy
     implements ExtractionStrategy
 {
-    private final ContentService contentService;
-
-    ConnectionExtractionStrategy( final ContentService contentService )
-    {
-        this.contentService = contentService;
-    }
-
     @Override
     @SuppressWarnings("unchecked")
     public List<Content> extract( final Object jsApiResult )
@@ -39,15 +28,13 @@ final class ConnectionExtractionStrategy
             return Collections.emptyList();
         }
 
-        final List<ContentId> contentIds =
-            edges.stream().map( edge -> (Map<String, Object>) edge.get( "node" ) ).map( node -> (String) node.get( "_id" ) ).filter(
-                Objects::nonNull ).map( ContentId::from ).toList();
+        final List<Map<String, Object>> contentsAsMap = edges.stream().map( edge -> (Map<String, Object>) edge.get( "node" ) ).toList();
 
-        if ( contentIds.isEmpty() )
+        if ( contentsAsMap.isEmpty() )
         {
             return Collections.emptyList();
         }
 
-        return contentService.getByIds( new GetContentByIdsParams( ContentIds.from( contentIds ) ) ).stream().toList();
+        return contentsAsMap.stream().map( ContentDeserializer::convert ).collect( Collectors.toList() );
     }
 }
